--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "web/public/**/*",
-      "use": "@vercel/static"
-    }
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "web/public/**", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/day/(.*)",
-      "dest": "web/public/day/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "web/public/$1"
-    }
+    { "src": "^/day(?:/(.*))?$", "dest": "web/public/day/$1" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1" },
+    { "src": "^(.*)$", "dest": "web/public$1" }
   ]
 }
